docs/_sass/jekyll-theme-minimal.scss
@import "fonts";
@import "rouge-github";

body {
  background-color: #fff;
  padding:50px;
  font: 16px/1.5 "Noto Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
  color:#333;
  font-weight:400;
}

h1, h2, h3, h4, h5, h6 {
  margin:0 0 20px;
}

p, ul, ol, table, pre, dl {
  margin:0 0 20px;
}

h1, h2, h3 {
  color:#111;
  line-height:1.1;
}

h1 {
  font-size:28px;
}

h4, h5, h6 {
  color:#222;
}

.wrapper {
  width:1100px;
  margin:0 auto;
}

.video-container {
  position:relative;
  height:0;
  overflow:hidden;
  padding-bottom:56.25%;
}

.video-container iframe {
  position: absolute;
  top:0;
  left:0;
  width:100%;
  height:100%;
}

.subpage-link {
  font-size:16px;
  color:#267CB9;
  text-decoration:none;
}

.invisible-link {
  color:#333;
}

.caption {
  margin: 0, 0, -10;
  text-align: center;
}

footer small a {
  font-size:11px;
  color:#555;
  margin-top:-0.3em;
}

a {
  color:#267CB9;
  text-decoration:none;
}

a:hover, a:focus {
  color:#069;
  // font-weight: bold;
  text-shadow: 0 0.015em #069,0 -0.015em #069,0.01em 0 #069,-0.01em 0 #069;
}

a small {
  font-size:11px;
  color:#555;
  margin-top:-0.3em;
}

a:hover small {
  color:#555;
}

.image-switch-on-hover .hide-on-hover {
  display: block;
}

.image-switch-on-hover:hover .hide-on-hover {
  display: none;
}

.image-switch-on-hover .show-on-hover {
  display: none;
}

.image-switch-on-hover:hover .show-on-hover {
  display: block;
}

blockquote {
  border-left:1px solid #e5e5e5;
  margin:0;
  padding:0 0 0 20px;
  font-style:italic;
}

code, pre {
  font-family:Monaco, Bitstream Vera Sans Mono, Lucida Console, Terminal, Consolas, Liberation Mono, DejaVu Sans Mono, Courier New, monospace;
  color:#333;
}

pre {
  padding:8px 15px;
  background: #f8f8f8;
  border-radius:5px;
  border:1px solid #e5e5e5;
  overflow-x: auto;
}

audio {
  margin:0 0 20px;
}

table {
  border-collapse:collapse;
  margin-left:auto;
  margin-right:auto;
}

th, td {
  text-align:left;
  padding:5px 10px;
  border-bottom:1px solid #e5e5e5;
}

dt {
  color:#444;
  font-weight:700;
}

th {
  color:#444;
}

td audio {
  margin:0;
}

img {
  max-width:100%;
  margin-left:auto;
  margin-right:auto;
}

header {
  width:260px;
  float:left;
  position:fixed;
  -webkit-font-smoothing:subpixel-antialiased;
}

header ul {
  list-style:none;
  height:40px;
  padding:0;
  background: #f4f4f4;
  border-radius:5px;
  border:1px solid #e0e0e0;
}

header li {
  width:89px;
  float:left;
  border-right:1px solid #e0e0e0;
  height:40px;
}

header li:first-child a {
  border-radius:5px 0 0 5px;
}

header li:last-child a {
  border-radius:0 5px 5px 0;
}

strong {
  color:#222;
  font-weight:700;
}

header ul li + li + li {
  border-right:none;
  width:89px;
}

header ul a strong {
  font-size:14px;
  display:block;
  color:#222;
}

section {
  width:750px;
  float:right;
}

small {
  font-size:11px;
}

hr {
  border:0;
  background:#e5e5e5;
  height:1px;
  margin:0 0 20px;
}

footer {
  width:740px;
  float:right;
  padding-bottom:50px;
  -webkit-font-smoothing:subpixel-antialiased;
}

@media print, screen and (max-width: 1200px) {

  div.wrapper {
    width:860px;
  }

  header {
    width:260px;
  }

  section, footer {
    width:560px;
  }

  ul {
    padding-left:20px;
  }

}

@media print, screen and (max-width: 960px) {

  div.wrapper {
    width:auto;
    margin:0;
  }

  header, section, footer {
    float:none;
    position:static;
    width:auto;
  }

  section {
    border:1px solid #e5e5e5;
    border-width:1px 0;
    padding:20px 0;
    margin:0 0 20px;
  }

  header a small {
    display:inline;
  }

  header ul {
    position:absolute;
    right:50px;
    top:52px;
  }

  hr {
      border:0;
      background:#fff;
      height:0;
      margin:0;
  }
}

@media print, screen and (max-width: 720px) {
  body {
    word-wrap:break-word;
  }

  header {
    padding:0;
  }

  header ul, header p.view {
    position:static;
  }

  pre, code {
    word-wrap:normal;
  }
}

@media print, screen and (max-width: 480px) {
  body {
    padding:15px;
  }

  header ul {
    width:99%;
  }

  header li, header ul li + li + li {
    width:33%;
  }
}

@media print {
  body {
    padding:0.4in;
    font-size:12pt;
    color:#444;
  }

  ul {
    padding-left:20px;
  }
}

